--- a/package.json
+++ b/package.json
@@ -2,14 +2,33 @@
   "name": "sensorsparks.api",
   "version": "0.1.0",
   "description": "A bundle of sensor sparks api",
-  "main": "index.js",
+  "source": "index.ts",
+  "main": "dist/main.js",
+  "module": "dist/module.js",
+  "types": "dist/types.d.ts",
   "scripts": {
+    "watch": "parcel watch",
+    "build": "parcel build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "targets": {
+    "main": {
+      "optimize": false
+    },
+    "module": {
+      "optimize": false
+    }
+  },
+  "files": [
+    "/dist"
+  ],
   "author": "support@sensorsparks.com",
   "license": "ISC",
   "devDependencies": {
+    "@parcel/packager-ts": "^2.15.1",
+    "@parcel/transformer-typescript-types": "^2.15.1",
     "@tsconfig/recommended": "^1.0.8",
-    "parcel": "^2.15.1"
+    "parcel": "^2.15.1",
+    "typescript": "^5.8.3"
   }
 }
